refactor: 설정 변경

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,29 +1,12 @@
 spring:
   application:
     name: crm-user
-
-  data:
-    redis:
-      host: localhost
-      port: 6379
-
-    mongodb:
-      host: localhost
-      port: 27017
-      database: medicrm
-      username: root
-      password: root
-      authentication-database: admin
-
-logging:
-  level:
-    org.springframework.security: DEBUG
-    org.springframework.data.mongodb.core.MongoTemplate: DEBUG
-    com.crm.adapter.out.persistence.mongodb: DEBUG
+  profiles:
+    active: ${SPRING_PROFILES_ACTIVE:dev}
 
 server:
   port: 8080
 
 secret:
-  key: userionowmiowe!@#niviwemci1238f9@SFSDFSiemiflsibisl!23gficfmbisoqofjioeF#isosdf-sfenioisemvie
-  expiration_hours: 1
+  key: ${JWT_SECRET:userionowmiowe!@#niviwemci1238f9@SFSDFSiemiflsibisl!23gficfmbisoqofjioeF#isosdf-sfenioisemvie}
+  expiration_hours: ${JWT_EXPIRATION_HOURS:1}
