--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -6,12 +6,7 @@ spring:
       password: ${REDIS_PASSWORD:}
 
     mongodb:
-      host: ${MONGODB_HOST:localhost}
-      port: ${MONGODB_PORT:27017}
-      database: ${MONGODB_DATABASE:medicrm}
-      username: ${MONGODB_USERNAME:root}
-      password: ${MONGODB_PASSWORD:root}
-      authentication-database: ${MONGODB_AUTH_DB:admin}
+      uri: ${MONGODB_URI}
 
 logging:
   level:
