feat: 프론트엔드 설정 추가

--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -16,3 +16,6 @@ logging:
     org.springframework.data.mongodb.core.MongoTemplate: INFO
     com.crm.adapter.out.persistence.mongodb: INFO
     root: WARN
+
+cors:
+  allowed-origins: ${FRONTEND_URL}
