--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -14,3 +14,6 @@ logging:
     org.springframework.data.mongodb.core.MongoTemplate: DEBUG
     com.crm.adapter.out.persistence.mongodb: DEBUG
     root: INFO
+
+cors:
+  allowed-origins: http://localhost:5173,http://localhost:3000
