--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -16,4 +16,4 @@ logging:
     root: INFO
 
 cors:
-  allowed-origins: http://localhost:5173,http://localhost:3000
+  allowed-origins: ${FRONTEND_URL:http://localhost:5173}
