--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -12,7 +12,7 @@ logging:
   level:
     org.springframework.security: DEBUG
     org.springframework.data.mongodb.core.MongoTemplate: DEBUG
-    com.crm.adapter.out.persistence.mongodb: DEBUG
+    com.medops: INFO
     root: INFO
 
 cors:
