--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -14,7 +14,7 @@ logging:
   level:
     org.springframework.security: INFO
     org.springframework.data.mongodb.core.MongoTemplate: INFO
-    com.crm.adapter.out.persistence.mongodb: INFO
+    com.medops: INFO
     root: WARN
 
 cors:
